Details
-
Type:
Bug
-
Status: Resolved
-
Priority:
P3
-
Resolution: Fixed
-
Affects Version/s: 7u4, 8, 11, 12
-
Fix Version/s: 13
-
Component/s: client-libs
-
Environment:
Mac10.13 + JDK11b28-64bit
-
Subcomponent:
-
Resolved In Build:b10
-
CPU:generic
-
OS:os_x
Description
Steps to reproduce:
1. Open Voice Over
2. Run SwingSet2.jar from demos.
3. Tab until the OptionPane icon has focus. Press 'space' to choose.
4. Tab until the "OptionPane Demo" tab has focus. Press 'space'. Press 'tab'. The 'Show Input Dialog' button should have focus.
5. Press 'space'. An Input dialog should pop up. Type some text, and hit return.
6. The dialog should change to a Message dialog with text saying "That was a pretty good movie!".Press return.
Expected results:
The focus should go to 'Show Input Dialog' button.
Actual results:
The focus is disappear after pressing return to close the "That was a pretty good movie!" dialog.
Then via keyboard we can do nothing from now.Please refer to focus.png.
1. Open Voice Over
2. Run SwingSet2.jar from demos.
3. Tab until the OptionPane icon has focus. Press 'space' to choose.
4. Tab until the "OptionPane Demo" tab has focus. Press 'space'. Press 'tab'. The 'Show Input Dialog' button should have focus.
5. Press 'space'. An Input dialog should pop up. Type some text, and hit return.
6. The dialog should change to a Message dialog with text saying "That was a pretty good movie!".Press return.
Expected results:
The focus should go to 'Show Input Dialog' button.
Actual results:
The focus is disappear after pressing return to close the "That was a pretty good movie!" dialog.
Then via keyboard we can do nothing from now.Please refer to focus.png.