8213071: [macos] The focus disappears after pressing return to close the "That was a pretty good movie!" dialog

Reviewed-by: serb